Adding my own content

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </button>
           <a class="brand" href="#">Bitstarter</a>
           <div class="nav-collapse collapse">
-            <ul class="nav">
+            <ul class="nav">nn
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
@@ -122,17 +122,17 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>What to do</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Finding things to do near you.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/tDPxzOG.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order and share buttons. -->
@@ -141,17 +141,17 @@
             <div class="statistics">
               <div class="span4">
                 <div class="linediv-l">
-                  <h3>1000</h3> <p>backers</p>
+                  <h3>1</h3> <p>of 1,000 backers</p>
                 </div>
-              </div>
-              <div class="span4">
+              </div> 
+             <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$60</h3> <p>of $1,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                  <h3>10</h3> <p>days left</p>
+                  <h3>30</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -159,8 +159,8 @@
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 0%;"></div>
+              <div class="bar bar-warning" style="width: 100%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
@@ -178,22 +178,22 @@
       <!-- Beyond this part the marketing copy begins. -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/PxudND7.png">
         </div>
         <div class="span5 copy">
           <p>
-            Marketing Section 2 for the first paragraph
+            Sometimes I just want to find some activity that I can enjoy no matter where I am. However I do not always know what to do. Well, that is what google was made for, I thought several times. After some minutes of searching, most of the times I end up flooded in a bunch of browser tabs with many events that occured in the past and still bored with nothing to do.
           </p>
         </div>
       </div>
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Marketing Section 3 for the first paragraph
+            Have you ever felt the same way? Ok, here is one place that can help us! In this place you will find events near you. Besides, after you score some of the events that you have attended, we can suggest you new things to do for the next time you get bored. Oh! and we will never suggest you events for which you'd need a time machine.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/PuH6rGL.png">
         </div>
       </div>
 
@@ -206,12 +206,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseOne">
-                  What does FAQ stand for?
+                  I search this site, and I find nothing. Is it working?
                 </a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Frequently Asked Question.
+                  We are now looking for supporters that tell us "Yeah! seems like a good idea, I would use it!". Like us on facebook and spread the word. If we get to our goal of 1,000 people backing us, we'll start building it for you.
                 </div>
               </div>
             </div>
@@ -219,12 +219,25 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseTwo">
-                  What's a Frequently Asked Question?
+                  Will I need to pay anything to use it?
                 </a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  A question which is commonly asked by users.
+                  No, if you are just looking fun things to do near you, you will not be charged for the use.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse"
+                    data-parent="#accordion2" href="#collapseTwo">
+                  You told that you'll suggest me things based on other events that I attend, Will my privacy be in danger?
+                </a>
+              </div>
+              <div id="collapseTwo" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  We are planning to use your information only to know which kind of things you like to do, and that way, we will be able to make you better suggestions the next time you want to have fun.
                 </div>
               </div>
             </div>
