Correcciones por tarea 7.1

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         text-align: justify;
       }
       .asset {
-        padding: 2,5% 0%;
+        padding: 2.5% 0%;
       }
       .footer {
         color: #cccccc;
@@ -109,7 +109,7 @@
           </button>
           <a class="brand" href="#">Bitstarter</a>
           <div class="nav-collapse collapse">
-            <ul class="nav">nn
+            <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
@@ -132,13 +132,14 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://i.imgur.com/tDPxzOG.png">
+          <img class="img-polaroid" alt="Problem" src="http://i.imgur.com/tDPxzOG.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order and share buttons. -->
         <div class="span5 actions">
+        <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <div class="linediv-l">
                   <h3>1</h3> <p>of 1,000 backers</p>
@@ -156,6 +157,7 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <div class="thermometer progress active">
@@ -163,22 +165,28 @@
               <div class="bar bar-warning" style="width: 100%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          </div>
+        </div>
         </div>
       </div>
 
       <!-- Beyond this part the marketing copy begins. -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/PxudND7.png">
+          <img class="img-polaroid" alt="Solution" src="http://i.imgur.com/PxudND7.png">
         </div>
         <div class="span5 copy">
           <p>
@@ -193,7 +201,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/PuH6rGL.png">
+          <img class="img-polaroid" alt="Results" src="http://i.imgur.com/PuH6rGL.png">
         </div>
       </div>
 
