Bitcoin preorder added

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
           <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="f075a2feb947644c3bb6ff0ed9f73721" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/f075a2feb947644c3bb6ff0ed9f73721">Preorder with Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
           </div>
           </div>
           <div class="row-fluid">
