Musical scores information added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
-    <title>Just my Bitstarter</title>
+    <title>Arreglos y Versiones</title>
     <meta name="viewport" content="width=device-width, initial-scale-1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -125,12 +125,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Arreglos y Versiones</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="#">Inicio</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact">Contactenos</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -140,17 +140,17 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>What to do</h1>
+          <h1>Arreglos y Versiones</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">Finding things to do near you.</p>
+          <p class="lead">Encuentra el arreglo que buscabas</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" alt="Problem" src="http://i.imgur.com/tDPxzOG.png">
+          <img class="img-polaroid" alt="Problem" src="http://i.imgur.com/wFrSNqm.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order and share buttons. -->
@@ -215,22 +215,24 @@
       <!-- Beyond this part the marketing copy begins. -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" alt="Solution" src="http://i.imgur.com/PxudND7.png">
+          <img class="img-polaroid" alt="Solution" src="http://i.imgur.com/nWjME0G.jpg">
         </div>
         <div class="span5 copy">
           <p>
-            Sometimes I just want to find some activity that I can enjoy no matter where I am. However I do not always know what to do. Well, that is what google was made for, I thought several times. After some minutes of searching, most of the times I end up flooded in a bunch of browser tabs with many events that occured in the past and still bored with nothing to do.
+            Tengo una agrupación musical y quiero tocar una pieza que me gusta pero no tengo la partitura y originalmente fue escrita para un formato completamente diferente al de mi grupo. Yo sé de alguien (un arreglista) que hizo una adaptación para el formato que necesito pero no sé como encontrarlo.
+
+Este problema es familiar? Este es el lugar donde resolverlo. Aqui usted, que es arreglista puede poner su adaptación para que otros músicos puedan tocarla en cualquier lugar del mundo. Y usted y su agrupación encontrarán una gran colección de arreglos para diferentes formatos que podrán acceder fácilmente para estar más tiempo tocando y menos tiempo escribiendo correos y buscando el arreglo adecuado.
           </p>
         </div>
       </div>
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Have you ever felt the same way? Ok, here is one place that can help us! In this place you will find events near you. Besides, after you score some of the events that you have attended, we can suggest you new things to do for the next time you get bored. Oh! and we will never suggest you events for which you'd need a time machine.
+            Carlos Pérez es cantante y arreglista de un trío de boleros en Guadalajara. Un cliente le pidió que en la celebración de los 20 años de su negocio interpretaran la obra "Mamá querida", Carlos hace la adaptación de la obra para su grupo, la interpreta y  posteriormente la sube al banco de datos (nosotros). Tres días después el trío "Los Sureños" de Pasto requiere interpretar la obra "Mamá querida", ingresa a la página, busca la obra y encuentra una adaptación para trío de bolero. La descarga (en partitura) por 5 euros, se ahorra el tiempo de sentarse a escribir la adaptación y en caso de no ser arreglista, el pago a este, que puede estar en 50 euros.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" alt="Results" src="http://i.imgur.com/PuH6rGL.png">
+          <img class="img-polaroid" alt="Results" src="http://i.imgur.com/nSgLYEN.jpg">
         </div>
       </div>
 
@@ -243,12 +245,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseOne">
-                  I search this site, and I find nothing. Is it working?
+                  Soy arreglista, porqué habría de publicar mi trabajo?
                 </a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  We are now looking for supporters that tell us "Yeah! seems like a good idea, I would use it!". Like us on facebook and spread the word. If we get to our goal of 1,000 people backing us, we'll start building it for you.
+                  Seguramente usted querrá que sus obras tengan más visibilidad y puedan ser interpretadas por muchos más músicos. Por supuesto, además de facilitar la comercialización de su trabajo.
                 </div>
               </div>
             </div>
@@ -256,25 +258,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseTwo">
-                  Will I need to pay anything to use it?
+                  Estoy buscando un arreglo de un músico que conozco pero no encuentro nada de su trabajo.
                 </a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  No, if you are just looking fun things to do near you, you will not be charged for the use.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-group">
-              <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse"
-                    data-parent="#accordion2" href="#collapseTwo">
-                  You told that you'll suggest me things based on other events that I attend, Will my privacy be in danger?
-                </a>
-              </div>
-              <div id="collapseTwo" class="accordion-body collapse">
-                <div class="accordion-inner">
-                  We are planning to use your information only to know which kind of things you like to do, and that way, we will be able to make you better suggestions the next time you want to have fun.
+                  Estamos trabajando para incrementar la cantidad de compositores y arreglistas en nuestro catálogo. Si puede, cuéntele de nosotros. Así, probablemente pronto hará parte de los artistas de los cuales puede encontrar obras aqui.
                 </div>
               </div>
             </div>
